# udt

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  reformat.sh
apps/: CMakeLists.txt  udt_client.cpp  udt_server.cpp
cmake-ms/: CMakeLists.txt
cmake-unix/: CMakeLists.txt
cmake/miscellaneous/: FindDrExplain.cmake  MSVCCleanupRuntimeFlags.cmake  Manifest.cmake  README.md  Version.cmake  build_file_list.cmake  helpers_target.cmake  manifest.json.in
include/udt/common/error/: error.h
include/udt/connected_protocol/: acceptor_session.h  endpoint.h  flow.h  multiplexer.h  multiplexers_manager.h  protocol.h  resolver.h  sequence_generator.h  socket_acceptor_service.h  socket_session.h  stream_socket_service.h
include/udt/connected_protocol/cache/: connection_info.h  connections_info_manager.h
include/udt/connected_protocol/congestion/: congestion_control.h
include/udt/connected_protocol/datagram/: basic_datagram.h  basic_header.h  basic_payload.h  empty_component.h
include/udt/connected_protocol/io/: accept_op.h  buffers.h  connect_op.h  op.h  read_op.h  write_op.h
include/udt/connected_protocol/logger/: file_log.h  log_entry.h  no_log.h
include/udt/connected_protocol/state/: accepting_state.h  base_state.h  closed_state.h  connected_state.h  connecting_state.h
include/udt/connected_protocol/state/connected/: ack_history_window.h  packet_time_history_window.h  receiver.h  sender.h
include/udt/connected_protocol/state/policy/: drop_connection_policy.h  response_connection_policy.h
include/udt/ip/: udt.h  udt_query.h  udt_resolver.h
include/udt/queue/: async_queue.h  async_queue_service.h
include/udt/queue/io/: get_op.h  handler_helpers.h  push_op.h
src/tests/: CMakeLists.txt  endpoint_helpers.h  protocol_helpers.h  stream_helpers.h  tests_helpers.h  udt_tests.cpp
src/timer_benchmark/: CMakeLists.txt  high_precision_timer_scheduler.hpp  main.cpp
src/timer_benchmark/detail/: high_precision_timer_scheduler.ipp
src/udt/common/error/: error.cpp  error.h
src/udt/connected_protocol/: acceptor_session.h  endpoint.h  flow.h  multiplexer.h  multiplexers_manager.h  protocol.h  resolver.h  resolver_query.h  sequence_generator.h  socket_acceptor_service.h  socket_session.h  stream_socket_service.h
src/udt/connected_protocol/cache/: connection_info.h  connections_info_manager.h
src/udt/connected_protocol/common/: observer.h
src/udt/connected_protocol/congestion/: congestion_control.h
src/udt/connected_protocol/datagram/: basic_datagram.h  basic_header.h  basic_payload.h  empty_component.h
src/udt/connected_protocol/io/: accept_op.h  buffers.h  connect_op.h  op.h  read_op.h  write_op.h
src/udt/connected_protocol/logger/: file_log.h  no_log.h
src/udt/connected_protocol/state/: accepting_state.h  base_state.h  closed_state.h  connected_state.h  connecting_state.h
src/udt/connected_protocol/state/connected/: ack_history_window.h  packet_time_history_window.h  receiver.h  sender.h
src/udt/connected_protocol/state/policy/: drop_connection_policy.h  response_connection_policy.h
src/udt/ip/: udt.h  udt_query.h  udt_resolver.h
src/udt/queue/: async_queue.h  async_queue_service.h
src/udt/queue/io/: get_op.h  handler_helpers.h  push_op.h
src/udt/timer/: basic_deadline_timer.hpp  basic_waitable_timer.hpp  deadline_timer_service.hpp  high_precision_timer_scheduler.hpp  waitable_timer_service.hpp
src/udt/timer/detail/: deadline_timer_service.hpp  high_precision_timer_scheduler.ipp
src/udt_client/: CMakeLists.txt  main.cpp
src/udt_server/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  endpoint_tests.cpp  protocol_tests.cpp  stream_tests.cpp  tests_helpers.h
tools/: plot.py
